migrations/wave4-keycloak/new-namespace/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-keycloakx
  namespace: staging-platform-keycloak
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/version: 26.5.1
    helm.sh/chart: keycloakx-7.1.7
  annotations:
    meta.helm.sh/release-name: keycloak
    meta.helm.sh/release-namespace: staging-platform-keycloak
spec:
  replicas: 1
  serviceName: keycloak-keycloakx-headless
  selector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloakx
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: keycloak
        app.kubernetes.io/name: keycloakx
      annotations:
        checksum/config-startup: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    spec:
      serviceAccountName: keycloak-keycloakx
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/instance: keycloak
                app.kubernetes.io/name: keycloakx
              matchExpressions:
              - key: app.kubernetes.io/component
                operator: NotIn
                values:
                - test
            topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: keycloak
                  app.kubernetes.io/name: keycloakx
                matchExpressions:
                - key: app.kubernetes.io/component
                  operator: NotIn
                  values:
                  - test
              topologyKey: topology.kubernetes.io/zone
      tolerations:
      - key: workload
        operator: Equal
        value: critical
        effect: NoSchedule
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.5.1
        imagePullPolicy: IfNotPresent
        command:
        - /opt/keycloak/bin/kc.sh
        - start
        - --http-relative-path=/auth
        - --health-enabled=true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: http-internal
          containerPort: 9000
          protocol: TCP
        - name: https
          containerPort: 8443
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 681Mi
          limits:
            cpu: "1"
            memory: 2724Mi
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        startupProbe:
          httpGet:
            path: /auth/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 60
        livenessProbe:
          httpGet:
            path: /auth/health/live
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /auth/health/ready
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
  updateStrategy:
    type: RollingUpdate
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
