migrations/wave4-keycloak/new-namespace/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-keycloakx-headless
  namespace: staging-platform-keycloak
  labels:
    app.kubernetes.io/component: headless
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/version: 26.5.1
    helm.sh/chart: keycloakx-7.1.7
  annotations:
    meta.helm.sh/release-name: keycloak
    meta.helm.sh/release-namespace: staging-platform-keycloak
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloakx
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-keycloakx-http
  namespace: staging-platform-keycloak
  labels:
    app.kubernetes.io/component: http
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/version: 26.5.1
    helm.sh/chart: keycloakx-7.1.7
  annotations:
    meta.helm.sh/release-name: keycloak
    meta.helm.sh/release-namespace: staging-platform-keycloak
spec:
  type: ClusterIP
  ports:
    - name: http-internal
      port: 9000
      protocol: TCP
      targetPort: http-internal
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloakx
